<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="10sp"
    android:paddingRight="10sp"
    android:paddingTop="10sp"
    android:paddingBottom="10sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/studentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:text="@string/temp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1"
            android:textColor="@color/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/present"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:textColor="@color/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/absent"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button3"
            android:textColor="@color/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/late"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button4"
            android:textColor="@color/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown"
            tools:ignore="ButtonStyle" />


    </LinearLayout>


</LinearLayout>